infrastructure/manifests/iot-stat-reader/linkerd-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-external-to-iot-stat-reader
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: iot-stat-reader-http
  requiredAuthenticationRefs:
    - kind: NetworkAuthentication
      group: policy.linkerd.io
      name: iot-stat-reader-external
---
# Allow iot-stat-reader to connect to Postgres
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-iot-stat-reader-to-postgres
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: postgres-server
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: iot-stat-reader-identity
